@@ -22,6 +22,7 @@ ikiwiki (2.65) UNRELEASED; urgency=low
     should be treated as an attachment.
   * rename: Add support for moving SubPages of a page when renaming it.
     (Sponsored by The TOVA Company.)
+  * rename: Hide type field from rename form when renaming attachments.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 17 Sep 2008 14:26:56 -0400
 
